Fix board bugs, add custom scrollbar

--- a/src/css-farm/farm.css
+++ b/src/css-farm/farm.css
@@ -4,7 +4,7 @@
   top: -100vh;
   left: -50vw;
   position: absolute;
-  /* background-image: linear-gradient(rgb(255, 0, 0, 0.1), rgb(0, 0, 255, 1.3)); */
+  background-image: linear-gradient(rgb(255, 0, 0, 0.1), rgb(0, 0, 255, 1.3));
   z-index: -100;
   border: none;
   border-radius: 50%;
